--- a/package.json
+++ b/package.json
@@ -4,20 +4,25 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start:dev": "NODE_ENV=development nodemon ./server/server.js",
-    "start:prod": "NODE_ENV=production node ./server/server.js",
+    "start": "set NODE_ENV=production && node ./server/server.js",
+    "dev": "set NODE_ENV=development && nodemon ./server/server.js",
+    "database": "node ./server/api/controllers/databaseinit",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@hapi/joi": "^17.0.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "bunyan": "^1.8.12",
     "chai": "^4.2.0",
+    "connect-mongo": "^3.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "mocha": "^7.0.0",
+    "passport": "^0.4.1",
     "supertest": "^4.0.2"
   },
   "devDependencies": {
