--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "mocha": "^7.0.0",
+    "mongoose": "^5.8.7",
     "passport": "^0.4.1",
     "supertest": "^4.0.2"
   },
