--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "set NODE_ENV=production && node ./server/server.js",
     "dev": "set NODE_ENV=development && nodemon ./server/server.js",
     "database": "node ./server/api/controllers/databaseinit",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "set NODE_ENV=test && mocha"
   },
   "author": "",
   "license": "ISC",
