--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "set NODE_ENV=production && node ./server/server.js",
     "dev": "set NODE_ENV=development && nodemon ./server/server.js",
+    "prod": "set NODE_ENV=production && nodemon ./server/server.js",
     "test": "set NODE_ENV=test && mocha"
   },
   "author": "",
